--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URI="mongodb+srv://hanad50433:mIhYpCk58b5lNZRr@chatappdatacollection.s1flfmy.mongodb.net/"
+MONGO_URI="mongodb+srv://thiscontainssecrets:s26vVjJ4ZSLLT2YZ@cluster0.fgualws.mongodb.net"
 TOKEN_SECRET="Sam-Sepiol"
-DOMAIN="http://localhost:5173"
+DOMAIN="http://localhost:8000"
